@@ -1,0 +1,21 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace RedVentures.Bot_O_Mat.API.Data.Enums
+{
+    public enum RobotTask
+    {
+        do_the_dishes = 1000,
+        sweep_the_house = 3000,
+        do_the_laundry = 10000,
+        take_out_the_recycling = 4000,
+        make_a_sammich = 7000,
+        mow_the_lawn = 20000,
+        rake_the_leaves = 18000,
+        give_the_dog_a_bath = 14500,
+        bake_some_cookies = 8000,
+        wash_the_car = 20000
+    }
+}
