@@ -1,0 +1,17 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace RedVentures.Bot_O_Mat.API.Data.Enums
+{
+    public enum RobotType
+    {
+        Unipedal,
+        Bipedal,
+        Quadrupedal,
+        Arachnid,
+        Radial,
+        Aeronautical
+    }
+}
