@@ -27,4 +27,8 @@
     <Folder Include="Views\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RedVentures.Bot-O-Mat.Common\RedVentures.Bot-O-Mat.Common.csproj" />
+  </ItemGroup>
+
 </Project>
