@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview3-19153-02" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RedVentures.Bot-O-Mat.Common\RedVentures.Bot-O-Mat.Common.csproj" />
+  </ItemGroup>
+
 </Project>
