@@ -17,6 +17,8 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "_documentation", "_document
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "RedVentures.Bot-O-Mat.Web", "RedVentures.Bot-O-Mat.Web\RedVentures.Bot-O-Mat.Web.csproj", "{739ED3D5-C417-4A83-B68A-CDC532E88EEA}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "RedVentures.Bot-O-Mat.Common", "RedVentures.Bot-O-Mat.Common\RedVentures.Bot-O-Mat.Common.csproj", "{7A532619-91DF-4995-A31D-430A22B47FFB}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -35,6 +37,10 @@ Global
 		{739ED3D5-C417-4A83-B68A-CDC532E88EEA}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{739ED3D5-C417-4A83-B68A-CDC532E88EEA}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{739ED3D5-C417-4A83-B68A-CDC532E88EEA}.Release|Any CPU.Build.0 = Release|Any CPU
+		{7A532619-91DF-4995-A31D-430A22B47FFB}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{7A532619-91DF-4995-A31D-430A22B47FFB}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{7A532619-91DF-4995-A31D-430A22B47FFB}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{7A532619-91DF-4995-A31D-430A22B47FFB}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
